# ExLibris

./: .gitignore  DEVELOPMENT.md  README.md  admins.txt  admins.txt.example  cleanup_library.py  config.json.example  config.yaml.example  convert_epub2.py  manage_users.py  pyproject.toml  scan_books.py  serve_web.py  update_epubs.py
apache/: exlibris.conf
exlibris/: __init__.py  admins.py  auth.py  author_tokens.py  book_paths.py  cleanup.py  cli.py  config.py  cover_paths.py  database.py  description_text.py  ebook_convert.py  ebook_meta.py  epub_update.py  epub_validate.py  fetch_metadata.py  filenames.py  job_lock.py  library_cache.py  models.py  scanner.py  sqlite_retry.py  users.py  web_server.py
exlibris/cgi/: common.py  redirects.py  render.py  search.py
exlibris/extractors/: __init__.py  base.py  epub.py  mobi.py  (+1 more)
scripts/: convert-epubs-in-dir.py  rename-short-files.py  scan-library.sh  setup-data-dir.sh  shard-covers.py
tests/: test_admin_mode.py  test_author_tokens.py  test_cleanup.py  test_cleanup_extra.py  test_cleanup_integration.py  test_cleanup_library_cli.py  test_config.py  test_cover_paths.py  test_delete_book.py  test_description_text.py  test_ebook_convert.py  test_epub_update.py  test_epub_validate.py  test_epub_validation_cache.py  test_fetch_metadata_import.py  test_fetch_metadata_merge.py  test_filenames.py  test_job_lock.py  test_library_cache.py  test_list_books_keyset.py  test_neighbor_book_ids.py  test_redirects.py  test_remove_invalid_epubs.py  test_rename_short_files.py  test_scan_epub_validation.py  test_scanner_repoint.py  test_shard_covers.py  test_sqlite_retry.py  test_web_server.py
(+34 files in other folders)
