[project]
name = "exlibris"
version = "0.1.0"
description = "Scan ebook directories and browse your library via a web UI"
readme = "README.md"
license = "BlueOak-1.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "sqlalchemy>=2.0",
]

[project.scripts]
exlibris = "exlibris.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exlibris"]
